# bitagent

./: .markdownlint.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  integration_issue.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  sanitize.yml  scorecard.yml
docs/: configuration.md  deployment.md  evidence.md  faq.md  index.md  quickstart.md  system-tab.md  troubleshooting.md  ui-guide.md  wants.md
docs/concepts/: architecture.md  classification.md  csam-defense.md  dht-crawler.md  glossary.md  wantbridge.md
docs/development/: setup.md
docs/integrations/: lidarr.md  private-tracker-mode.md  prowlarr.md  radarr.md  readarr.md  sonarr.md
docs/legal/: disclaimer.md
docs/operations/: backup-restore.md  monitoring.md  performance.md  security.md  upgrade.md
docs/project/: changelog.md  donate-banner-snippets.md  improvements.md
docs/reference/: cli.md  dashboard-api.md  graphql-api.md  metrics.md  torznab-api.md
examples/: compose.authelia.yml  compose.public.yml  compose.tailnet.yml
examples/prowlarr/: bitagent.yml
scripts/: sanitize.py
static/v1/: tokens.css
ui/: .env.example  .gitignore  Dockerfile  app.py  auth.py  config.py  database.py  graphql_client.py  pyproject.toml  requirements.txt  tmdb.py
ui/static/css/: app.css  tokens.css
ui/static/js/: app.js
ui/templates/: index.html
